# 202507-lipari-school

./: .env.example  .gitignore  1_basics_of_working_with_pdfs-complete.ipynb  2_basic_rag-complete.ipynb  3_pdfs_with_images-complete.ipynb  4_pdfs_simplified-complete.ipynb  README.md  app.py  docker-compose.yml  import_data.py  main.py  preprocess_pdf_to_img.py  pyproject.toml  requirements.txt  try_this.py
.devcontainer/: devcontainer.json
